--- a/index.html
+++ b/index.html
@@ -152,14 +152,38 @@
 
         </div>
     </section>
-    <section id="community">
+    <section id="cta">
         <div class="container">
-
+            <div class="row">
+                <div class="col-lg-6">
+                    <h1>Optimize your productivity today</h1>
+                    <p class="p-hero">Start taking advanatge of all the features <span class="notera">Notera</span> offers, and begin streamlining your workflow.
+                        Get more done faster. Choose the smater way to stay productive.</p>
+                    <button type="button" class="btn-hero">Create Account</button>
+                </div>
+                <div class="col-lg-6 center">
+                    <img src="https://media1.giphy.com/media/zhYSVCirREeIZtONCI/200w.webp?cid=ecf05e47v4g8h4g9qvahag9rsh1uhhej29qx6tz7cb7su3bi&rid=200w.webp&ct=s"
+                        alt="cat-animation" class="cta-img">
+                </div>
+            </div>
         </div>
     </section>
     <section id="footer">
         <div class="container">
-
+            <div class="row center justify-content-center">
+                <div class="col-sm-3 hide-md"><hr></div>
+                <div class="col-sm-6">
+                    <a href="#" class="icon-href"><i class="fa-brands fa-facebook-f social-icon fa-2x"></i></a>
+                    <a href="#" class="icon-href"><i class="fa-brands fa-instagram fa-2x social-icon"></i></a>
+                    <a href="#" class="icon-href"><i class="fa-brands fa-twitter fa-2x social-icon"></i></a>
+                    <a href="#" class="icon-href"><i class="fa-brands fa-github fa-2x social-icon"></i></a>
+                </div>
+                <div class="col-sm-3 hide-md"><hr></div>
+                <div class="container footer-footer">
+                    <a href="index.html"><img src="images/noteraLogo_500x450.png" alt="Notera logo" class="footer-notera-img"><span class="notera footer-notera-txt align-top">Notera</span></a>
+                    <p class="copyright">Copyright © 2022 <span class="notera-footer">Notera</span></p>
+                </div>
+            </div>
         </div>
     </section>
     <!-- bootstrap js -->
