--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Notera | Optimized productivity.</title>
-    <meta name="title" content="Notera | Optimized productivity.">
+    <title>Notera | Optimized Productivity</title>
+    <meta name="title" content="Notera | Optimized Productivity">
     <meta name="description"
         content="Welcome to Notera, a next-gen hub of optimized academic productivity, and personal organization for the modern student. Structure your semester, and work the better-smarter way with Notera.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -71,51 +71,49 @@
         <div class="container">
             <h2 class="center h2-features">Explore <span class="notera">Notera</span></h2>
             <div class="row row-header row-features feat-row-reverse">
-                <div class="col-lg-6">
+                <div class="col-lg-6 align-self-center">
                     <h3 class="feat-h3">Notebooks</h3>
-                    <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic
-                        or web designs. The passage is attributed to an unknown typesetter in the 15th century who is
-                        thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type
-                        specimen book. It usually begins with:</p>
+                    <p>Organize, and keep all your work in a simple yet efficient way with our Notebook “tree-data” like
+                        structure. Create a Notebook for each course, and store all relevant data and files with the
+                        ability to create sub-notebooks. Create notes, documents, and combine your
+                        workflow with our built-in widgets and integrations to optimize your efficiency.</p>
                 </div>
                 <div class="col-lg-6 feat-img-end">
-                    <img src="images/mock.png" alt="" class="img-features">
+                    <img src="images/notebooks-mockup.png" alt="" class="img-features">
                 </div>
             </div>
             <div class="row row-header row-features">
                 <div class="col-lg-6 feat-img-start">
-                    <img src="images/mock.png" alt="" class="img-features">
+                    <img src="images/calendar-mockup.png" alt="" class="img-features">
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 align-self-center">
                     <h3 class="feat-h3">Calendar</h3>
-                    <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic
-                        or web designs. The passage is attributed to an unknown typesetter in the 15th century who is
-                        thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type
-                        specimen book. It usually begins with:</p>
+                    <p>Keep track of all upcoming assignments, due dates and events. Create reminders, and
+                        never miss a deadline or payment ever again. Set automatic actions to occur at specific
+                        times with our integrative calendar. Create multiple calendars, and share them with others.</p>
                 </div>
             </div>
             <div class="row row-header row-features feat-row-reverse">
-                <div class="col-lg-6">
+                <div class="col-lg-6 align-self-center">
                     <h3 class="feat-h3">Collaborate</h3>
-                    <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic
-                        or web designs. The passage is attributed to an unknown typesetter in the 15th century who is
-                        thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type
-                        specimen book. It usually begins with:</p>
+                    <p>Collaborate with others to work on assignments simultaneously, create and update calendars for
+                        the semester, share assignments instantaneously, send messages and video call for optimal
+                        productivity, all from the comfort of one application.</p>
                 </div>
                 <div class="col-lg-6 feat-img-end">
-                    <img src="images/mock.png" alt="" class="img-features">
+                    <img src="images/collaborate-mockup.png" alt="" class="img-features">
                 </div>
             </div>
             <div class="row row-header row-features">
                 <div class="col-lg-6 feat-img-start">
-                    <img src="images/mock.png" alt="" class="img-features">
+                    <img src="images/extensions-mockup.png" alt="" class="img-features">
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 align-self-center">
                     <h3 class="feat-h3">Extensions</h3>
-                    <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic
-                        or web designs. The passage is attributed to an unknown typesetter in the 15th century who is
-                        thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type
-                        specimen book. It usually begins with:</p>
+                    <p>Take advantage of our built-in extensions and integrations for the optimal
+                        experience. Log in to your Spotify or Apple Music account to control what you listen to within
+                        your assignment window. Send emails, check the latest news, and track your stock portfolio
+                        without interrupting your workflow.</p>
                 </div>
             </div>
         </div>
@@ -125,24 +123,24 @@
             <h2 class="integrations-h2">Integrations</h2>
             <div class="int-anim-lg">
                 <div class="int-images-lg">
-                    <img src="images/apple-music.png" alt="" class="integrations-img">
-                    <img src="images/spotify.png" alt="" class="integrations-img">
+                    <a href="https://music.apple.com/us/browse" target="_blank"><img src="images/apple-music.png" alt="" class="integrations-img"></a>
+                    <a href="https://www.spotify.com/us/" target="_blank"><img src="images/spotify.png" alt="" class="integrations-img"></a>
                 </div>
                 <div class="int-images-lg-2">
-                    <img src="images/google-news.png" alt="" class="integrations-img">
-                    <img src="images/gmail.png" alt="" class="integrations-img">
+                    <a href="https://news.google.com/topstories?hl=en-US&gl=US&ceid=US:en" target="_blank"><img src="images/google-news.png" alt="" class="integrations-img"></a>
+                    <a href="https://www.google.com/gmail/" target="_blank"><img src="images/gmail.png" alt="" class="integrations-img"></a>
                 </div>
                 <div class="int-images-lg-3">
-                    <img src="images/bloomberg.png" alt="" class="integrations-img">
-                    <img src="images/News-API.png" alt="" class="integrations-img">
+                    <a href="https://www.bloomberg.com/" target="_blank"><img src="images/bloomberg.png" alt="" class="integrations-img"></a>
+                    <a href="https://newsapi.org/" target="_blank"><img src="images/News-API.png" alt="" class="integrations-img"></a>
                 </div>
                 <div class="int-images-lg-4">
-                    <img src="images/atom-finance.png" alt="" class="integrations-img">
-                    <img src="images/financial-times.png" alt="" class="integrations-img">
+                    <a href="https://atom.finance/" target="_blank"><img src="images/atom-finance.png" alt="" class="integrations-img"></a>
+                    <a href="https://www.ft.com/" target="_blank"><img src="images/financial-times.png" alt="" class="integrations-img"></a>
                 </div>
                 <div class="int-images-lg-5">
-                    <img src="images/adobe.png" alt="" class="integrations-img">
-                    <img src="images/quickchart.png" alt="" class="integrations-img">
+                    <a href="https://www.adobe.com/" target="_blank"><img src="images/adobe.png" alt="" class="integrations-img"></a>
+                    <a href="https://quickchart.io/" target="_blank"><img src="images/quickchart.png" alt="" class="integrations-img"></a>
                 </div>
             </div>
         </div>
@@ -157,13 +155,14 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h1>Optimize your productivity today</h1>
-                    <p class="p-hero">Start taking advanatge of all the features <span class="notera">Notera</span> offers, and begin streamlining your workflow.
+                    <p class="p-hero">Start taking advanatge of all the features <span class="notera">Notera</span>
+                        offers, and begin streamlining your workflow.
                         Get more done faster. Choose the smater way to stay productive.</p>
                     <button type="button" class="btn-hero">Create Account</button>
                 </div>
                 <div class="col-lg-6 center">
-                    <img src="https://media1.giphy.com/media/zhYSVCirREeIZtONCI/200w.webp?cid=ecf05e47v4g8h4g9qvahag9rsh1uhhej29qx6tz7cb7su3bi&rid=200w.webp&ct=s"
-                        alt="cat-animation" class="cta-img">
+                    <img src="images/icon-user.png"
+                        alt="cta-animation" class="cta-img">
                 </div>
             </div>
         </div>
@@ -171,16 +170,22 @@
     <section id="footer">
         <div class="container">
             <div class="row center justify-content-center">
-                <div class="col-sm-3 hide-md"><hr></div>
+                <div class="col-sm-3 hide-md">
+                    <hr>
+                </div>
                 <div class="col-sm-6">
                     <a href="#" class="icon-href"><i class="fa-brands fa-facebook-f social-icon fa-2x"></i></a>
                     <a href="#" class="icon-href"><i class="fa-brands fa-instagram fa-2x social-icon"></i></a>
                     <a href="#" class="icon-href"><i class="fa-brands fa-twitter fa-2x social-icon"></i></a>
-                    <a href="#" class="icon-href"><i class="fa-brands fa-github fa-2x social-icon"></i></a>
+                    <a href="https://github.com/piarenivar" target="_blank" class="icon-href"><i
+                            class="fa-brands fa-github fa-2x social-icon"></i></a>
                 </div>
-                <div class="col-sm-3 hide-md"><hr></div>
+                <div class="col-sm-3 hide-md">
+                    <hr>
+                </div>
                 <div class="container footer-footer">
-                    <a href="index.html"><img src="images/noteraLogo_500x450.png" alt="Notera logo" class="footer-notera-img"><span class="notera footer-notera-txt align-top">Notera</span></a>
+                    <a href="index.html"><img src="images/noteraLogo_500x450.png" alt="Notera logo"
+                            class="footer-notera-img"><span class="notera footer-notera-txt align-top">Notera</span></a>
                     <p class="copyright">Copyright © 2022 <span class="notera-footer">Notera</span></p>
                 </div>
             </div>
