--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <li class="nav-item"><a href="#features" class="nav-link">Features</a></li>
                         <li class="nav-item"><a href="#integrations" class="nav-link">Integrations</a></li>
                         <li class="nav-item"><a href="#discover" class="nav-link">Discover</a></li>
-                        <li class="nav-item"><a href="#community" class="nav-link">Community</a></li>
+                        <!-- <li class="nav-item"><a href="#community" class="nav-link">Community</a></li> -->
                     </ul>
                     <div class="navbar-nav d-flex">
                         <li class="nav-item dropdown">
@@ -53,10 +53,9 @@
             </nav>
             <div class="row row-header content-hero">
                 <div class="col-lg-6 hero-col-l">
-                    <h1>A next-gen hub for optimized productivity</h1>
-                    <p class="p-hero">Welcome to Notera, a next-gen productivity hub for the modern student.
-                        Keep your files, assignments, tasks and events in one place, and organize your life the smarter
-                        way.</p>
+                    <h1>A Next-Gen Hub For Optimized Productivity</h1>
+                    <p class="p-hero">Welcome to Notera, a next-gen productivity hub for the modern Sapien.
+                        Organize and manage your life in one place. Life, the smarter way.</p>
                     <button type="button" class="btn-hero">Get Started</button>
                 </div>
                 <div class="col-lg-6 center">
@@ -123,46 +122,212 @@
             <h2 class="integrations-h2">Integrations</h2>
             <div class="int-anim-lg">
                 <div class="int-images-lg">
-                    <a href="https://music.apple.com/us/browse" target="_blank"><img src="images/apple-music.png" alt="" class="integrations-img"></a>
-                    <a href="https://www.spotify.com/us/" target="_blank"><img src="images/spotify.png" alt="" class="integrations-img"></a>
+                    <a href="https://music.apple.com/us/browse" target="_blank"><img src="images/apple-music.png" alt=""
+                            class="integrations-img"></a>
+                    <a href="https://www.spotify.com/us/" target="_blank"><img src="images/spotify.png" alt=""
+                            class="integrations-img"></a>
                 </div>
                 <div class="int-images-lg-2">
-                    <a href="https://news.google.com/topstories?hl=en-US&gl=US&ceid=US:en" target="_blank"><img src="images/google-news.png" alt="" class="integrations-img"></a>
-                    <a href="https://www.google.com/gmail/" target="_blank"><img src="images/gmail.png" alt="" class="integrations-img"></a>
+                    <a href="https://news.google.com/topstories?hl=en-US&gl=US&ceid=US:en" target="_blank"><img
+                            src="images/google-news.png" alt="" class="integrations-img"></a>
+                    <a href="https://www.google.com/gmail/" target="_blank"><img src="images/gmail.png" alt=""
+                            class="integrations-img"></a>
                 </div>
                 <div class="int-images-lg-3">
-                    <a href="https://www.bloomberg.com/" target="_blank"><img src="images/bloomberg.png" alt="" class="integrations-img"></a>
-                    <a href="https://newsapi.org/" target="_blank"><img src="images/News-API.png" alt="" class="integrations-img"></a>
+                    <a href="https://www.bloomberg.com/" target="_blank"><img src="images/bloomberg.png" alt=""
+                            class="integrations-img"></a>
+                    <a href="https://newsapi.org/" target="_blank"><img src="images/News-API.png" alt=""
+                            class="integrations-img"></a>
                 </div>
                 <div class="int-images-lg-4">
-                    <a href="https://atom.finance/" target="_blank"><img src="images/atom-finance.png" alt="" class="integrations-img"></a>
-                    <a href="https://www.ft.com/" target="_blank"><img src="images/financial-times.png" alt="" class="integrations-img"></a>
+                    <a href="https://atom.finance/" target="_blank"><img src="images/atom-finance.png" alt=""
+                            class="integrations-img"></a>
+                    <a href="https://www.ft.com/" target="_blank"><img src="images/financial-times.png" alt=""
+                            class="integrations-img"></a>
                 </div>
                 <div class="int-images-lg-5">
-                    <a href="https://www.adobe.com/" target="_blank"><img src="images/adobe.png" alt="" class="integrations-img"></a>
-                    <a href="https://quickchart.io/" target="_blank"><img src="images/quickchart.png" alt="" class="integrations-img"></a>
+                    <a href="https://www.adobe.com/" target="_blank"><img src="images/adobe.png" alt=""
+                            class="integrations-img"></a>
+                    <a href="https://quickchart.io/" target="_blank"><img src="images/quickchart.png" alt=""
+                            class="integrations-img"></a>
                 </div>
             </div>
         </div>
     </section>
     <section id="discover">
         <div class="container">
-
+            <h2 class="center disc-h2">How You Can Use <span class="notera">Notera</span></h2>
+            <div class="container center">
+                <input type="radio" name="disc-tab" id="disc-stud" checked>
+                <label for="disc-stud" class="disc-label">Students</label>
+                <input type="radio" name="disc-tab" id="disc-prof">
+                <label for="disc-prof" class="disc-label">Professionals</label>
+                <input type="radio" name="disc-tab" id="disc-pers">
+                <label for="disc-pers" class="disc-label">Personal</label>
+                <div class="stud-content" id="stud-content">
+                    <div class="row row-header row-features feat-row-reverse">
+                        <!-- disc-txt-col-left -->
+                        <div class="col-lg-6 align-self-center">
+                            <h3 class="feat-h3">Academic Life</h3>
+                            <p>Create notebooks for all your courses, and keep all your assignments
+                                in one place. Structure your schedule, and organize your classes, events and
+                                deadlines. Colaborate with classmates to complete assignments
+                                efficiently, and get the grades you deserve.</p>
+                        </div>
+                        <div class="col-lg-6 feat-img-end align-self-center">
+                            <div id="carouselExampleIndicators" class="carousel slide " data-bs-ride="true">
+                                <div class="carousel-indicators">
+                                    <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        data-bs-slide-to="0" class="active" aria-current="true"
+                                        aria-label="Slide 1"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                </div>
+                                <div class="carousel-inner center">
+                                    <div class="carousel-item active align-self-center">
+                                        <img src="images/disc-stud-mock-1.png" alt="Mock 1" class="disc-imgs">
+                                        <h6>Work simultaneously with others</h6>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="images/disc-stud-mock-2.png" class="disc-imgs" alt="Mock 2">
+                                        <h6>Create and submit assignments from <span class="notera">Notera</span></h6>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="images/disc-stud-mock-3.png" class="disc-imgs" alt="Mock 2">
+                                        <h6>Structure your schedule, and automate tasks</h6>
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button"
+                                    data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button"
+                                    data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="prof-content" id="prof-content">
+                    <div class="row row-header row-features">
+                        <div class="col-lg-6 feat-img-start">
+                            <div id="carouselExampleIndicators2" class="carousel slide " data-bs-ride="true">
+                                <div class="carousel-indicators">
+                                    <button type="button" data-bs-target="#carouselExampleIndicators2"
+                                        data-bs-slide-to="0" class="active" aria-current="true"
+                                        aria-label="Slide 1"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators2"
+                                        data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators2"
+                                        data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                </div>
+                                <div class="carousel-inner center">
+                                    <div class="carousel-item active align-self-center">
+                                        <img src="images/disc-stud-mock-1.png" alt="Mock 1" class="disc-imgs">
+                                        <h6>Work simultaneously with others</h6>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="images/disc-stud-mock-2.png" class="disc-imgs" alt="Mock 2">
+                                        <h6>Create and submit assignments from <span class="notera">Notera</span></h6>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="images/disc-stud-mock-3.png" class="disc-imgs" alt="Mock 2">
+                                        <h6>Structure your schedule, and automate tasks</h6>
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button"
+                                    data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button"
+                                    data-bs-target="#carouselExampleIndicators2" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 align-self-center">
+                            <h3 class="feat-h3">Work Life</h3>
+                            <p>Everything you need for your big project in one place. Optimize your efficiency, and
+                                streamline your workflow to get more done faster. Hold meetings with your team, take
+                                meeting notes, and convert them to expedite your tasks. Organize a task list, and check
+                                it off the smarter way.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="pers-content" id="pers-content">
+                    <div class="row row-header row-features feat-row-reverse">
+                        <div class="col-lg-6 align-self-center">
+                            <h3 class="feat-h3">Daily Life</h3>
+                            <p>Ease the anxiety of feeling like you're not being productive. Notera takes away the
+                                weight and
+                                stress of your shoulders, and lets you take back charge of your life. Take on your
+                                to-do's,
+                                hobbies and plans with the confidence you've always deserved, and live life the right
+                                way.</p>
+                        </div>
+                        <div class="col-lg-6 feat-img-end">
+                            <div id="carouselExampleIndicators3" class="carousel slide " data-bs-ride="true">
+                                <div class="carousel-indicators">
+                                    <button type="button" data-bs-target="#carouselExampleIndicators3"
+                                        data-bs-slide-to="0" class="active" aria-current="true"
+                                        aria-label="Slide 1"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators3"
+                                        data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators3"
+                                        data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                </div>
+                                <div class="carousel-inner center">
+                                    <div class="carousel-item active align-self-center">
+                                        <img src="images/disc-stud-mock-1.png" alt="Mock 1" class="disc-imgs">
+                                        <h6>Work simultaneously with others</h6>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="images/disc-stud-mock-2.png" class="disc-imgs" alt="Mock 2">
+                                        <h6>Create and submit assignments from <span class="notera">Notera</span></h6>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="images/disc-stud-mock-3.png" class="disc-imgs" alt="Mock 2">
+                                        <h6>Structure your schedule, and automate tasks</h6>
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button"
+                                    data-bs-target="#carouselExampleIndicators3" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button"
+                                    data-bs-target="#carouselExampleIndicators3" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
         </div>
     </section>
     <section id="cta">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <h1>Optimize your productivity today</h1>
-                    <p class="p-hero">Start taking advanatge of all the features <span class="notera">Notera</span>
-                        offers, and begin streamlining your workflow.
-                        Get more done faster. Choose the smater way to stay productive.</p>
+                    <h1>Optimize Your Productivity Today</h1>
+                    <p class="p-hero">Begin living your life the smarter way, and start taking advantage of all that
+                        <span class="notera">Notera</span> offers.
+                        Get more done faster. Choose the smater way to stay productive.
+                    </p>
                     <button type="button" class="btn-hero">Create Account</button>
                 </div>
                 <div class="col-lg-6 center">
-                    <img src="images/icon-user.png"
-                        alt="cta-animation" class="cta-img">
+                    <img src="images/icon-user.png" alt="cta-animation" class="cta-img">
                 </div>
             </div>
         </div>
