Added Log In/Create Account Page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="hero">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark">
-                <a href="index.html" class="navbar-brand"><img src="images/noteraLogo_500x450.png" alt="Notera logo"
+                <a href="index.html#create-account" class="navbar-brand"><img src="images/noteraLogo_500x450.png" alt="Notera logo"
                         width="48px"><span class="notera notera-nav align-top">Notera</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -44,8 +44,8 @@
                                 Account
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Log In</a></li>
-                                <li><a class="dropdown-item" href="#">Create Account</a></li>
+                                <li><a class="dropdown-item" href="account.html">Log In</a></li>
+                                <li><a class="dropdown-item" href="account.html">Create Account</a></li>
                             </ul>
                         </li>
                     </div>
@@ -56,7 +56,7 @@
                     <h1>A Next-Gen Hub For Optimized Productivity</h1>
                     <p class="p-hero">Welcome to Notera, a next-gen productivity hub for the modern Sapien.
                         Organize and manage your life in one place. Life, the smarter way.</p>
-                    <button type="button" class="btn-hero">Get Started</button>
+                        <a href="account.html"><button type="button" class="btn-hero">Get Started</button></a>
                 </div>
                 <div class="col-lg-6 center">
                     <img src="images/mock.png" alt="Notera dashboard mock-up" class="img-hero">
@@ -324,7 +324,7 @@
                         <span class="notera">Notera</span> offers.
                         Get more done faster. Choose the smater way to stay productive.
                     </p>
-                    <button type="button" class="btn-hero">Create Account</button>
+                    <a href="account.html"><button type="button" class="btn-hero">Create Account</button></a>
                 </div>
                 <div class="col-lg-6 center">
                     <img src="images/icon-user.png" alt="cta-animation" class="cta-img">
